--- a/_posts/2019-11-28-ajax-bug.md
+++ b/_posts/2019-11-28-ajax-bug.md
@@ -2,7 +2,7 @@
 title: 前端异步请求引发的问题
 categories:
   - issue
-tag:
+tags:
   - ajax
 ---
 前些天公司旧项目有一个表单提交的页面，后台处理完数据会在session中存入处理成功的字符串信息然后跳转到jsp页面显示，
